src/test/deca/syntax/invalid/SansObjet/MissingSemi.deca
//Description
//  ; manquant
//
//Réponse
//  Erreur syntaxique ligne 10
//  no viable alternative at input '}'

{
    int x = 6
}